# wxWidgets-Helloworld

./: CMakeLists.txt  main.cpp
